@@ -1,2 +1,1 @@
 include CHANGELOG README.rst setup.py tox.ini
-graft doc
